--- a/package.json
+++ b/package.json
@@ -25,43 +25,43 @@
     "@swc/helpers": "^0.5.17",
     "@tabler/icons-react": "^3.35.0",
     "@tanstack/react-table": "^8.21.3",
-    "core-js": "^3.45.1",
+    "core-js": "^3.46.0",
     "date-fns": "^4.1.0",
     "foxact": "^0.2.49",
     "react": "19.0.0-rc-3edc000d-20240926",
     "react-dom": "19.0.0-rc-3edc000d-20240926",
-    "react-router-dom": "^6.30.1",
+    "react-router-dom": "^6.30.2",
     "swr": "^2.3.6",
     "title": "^3.5.3"
   },
   "devDependencies": {
-    "@cloudflare/workers-types": "^4.20250913.0",
+    "@cloudflare/workers-types": "^4.20251117.0",
     "@eslint-sukka/node": "6.12.0",
     "@eslint-sukka/react": "6.12.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.6.1",
-    "@swc/core": "^1.13.5",
-    "@types/react": "^18.3.24",
+    "@swc/core": "^1.15.2",
+    "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@types/title": "^3.4.3",
-    "browserslist": "^4.26.0",
+    "browserslist": "^4.28.0",
     "copy-webpack-plugin": "^13.0.1",
     "css-minimizer-webpack-plugin": "^7.0.2",
-    "eslint": "^9.35.0",
+    "eslint": "^9.39.1",
     "eslint-config-sukka": "6.12.0",
     "eslint-formatter-sukka": "6.12.0",
     "html-webpack-plugin": "^5.6.4",
-    "lightningcss": "^1.30.1",
-    "react-refresh": "^0.17.0",
+    "lightningcss": "^1.30.2",
+    "react-refresh": "^0.18.0",
     "swc-loader": "^0.2.6",
     "terser-webpack-plugin": "^5.3.14",
     "tsconfig-paths-webpack-plugin": "^4.2.0",
-    "typescript": "^5.9.2",
-    "webpack": "^5.101.3",
+    "typescript": "^5.9.3",
+    "webpack": "^5.102.1",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
-  "packageManager": "pnpm@10.16.1",
+  "packageManager": "pnpm@10.22.0",
   "pnpm": {
     "overrides": {
       "array-includes": "npm:@nolyfill/array-includes@^1.0.44",
@@ -69,6 +69,7 @@
       "array.prototype.flatmap": "npm:@nolyfill/array.prototype.flatmap@^1.0.44",
       "array.prototype.tosorted": "npm:@nolyfill/array.prototype.tosorted@^1.0.44",
       "es-iterator-helpers": "npm:@nolyfill/es-iterator-helpers@^1.0.21",
+      "eslint>chalk": "npm:picocolors@^1.1.1",
       "has": "npm:@nolyfill/has@^1.0.44",
       "object-keys": "npm:@nolyfill/object-keys@^1.0.44",
       "object.assign": "npm:@nolyfill/object.assign@^1.0.44",
@@ -78,8 +79,12 @@
       "object.values": "npm:@nolyfill/object.values@^1.0.44",
       "side-channel": "npm:@nolyfill/side-channel@^1.0.44",
       "string.prototype.matchall": "npm:@nolyfill/string.prototype.matchall@^1.0.44",
-      "eslint>chalk": "npm:picocolors@^1.1.1",
-      "title>chalk": "npm:picocolors@^1.1.1"
+      "title>chalk": "npm:picocolors@^1.1.1",
+      "array-flatten": "npm:@nolyfill/array-flatten@^1",
+      "is-core-module": "npm:@nolyfill/is-core-module@^1",
+      "isarray": "npm:@nolyfill/isarray@^1",
+      "safe-buffer": "npm:@nolyfill/safe-buffer@^1",
+      "safer-buffer": "npm:@nolyfill/safer-buffer@^1"
     },
     "ignoredBuiltDependencies": [
       "core-js"
